FIX: Comments layout
This commit removes extra spaces introduced by ShowDown library and 
includes fixes to  c76a7c7da227d6b43c158f0e7e6064a97c47ba81

--- a/app/_attachments/main.css
+++ b/app/_attachments/main.css
@@ -229,6 +229,7 @@ button.comment {
   vertical-align: 20px;
 }
 
+.comment_text > ul, .comment_text > ol,
 .comment_text > blockquote {
   margin-bottom: 0px;
 }
